(lang dune 3.14)

(name monad_perf_bench)

(generate_opam_files true)

(source
 (github haoxuany/monad_perf_bench))

(authors "Haoxuan (Aaron) Yue")

(maintainers "yuehaoxuanar@yahoo.com.sg")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name monad_perf_bench)
 (synopsis "small program benchmarking performance of several state monads")
 (description "small program benchmarking performance of several state monad implementations")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
